# Smart-Data-Analyzer

./: concept.txt  main.py  pipeline.py  prompts.py  pyproject.toml  test.py  types.py
components/: pipeline.py  query_checker.py  query_processor.py  report_generator.py
database/: mongo.py  mysql.py  postgres.py
model/: llm.py  query_llm.py  report_llm.py  response_format.py
query/: vllm_query.py
tests/: test_components.py  test_structure.py
