[tool.poetry]
name = "dataanalyzer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyautogen = "^0.2.33"
cassandra-driver = "^3.29.1"
psycopg2-binary = "^2.9.9"
haystack-ai = "^2.3.1"
sentence-transformers = "^3.0.1"
instructor = "^1.3.7"
pydantic = "^2.8.2"
litellm = "^1.43.7"
ollama = "^0.3.1"
google = "^3.0.0"
google-generativeai = "^0.7.2"
pymysql = "^1.1.1"
pymongo = "^4.8.0"
vllm = "^0.6.3.post1"
openai = "^1.53.0"
tqdm = "^4.67.0"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
